# bazel-remote-exec

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  get_platform_test.sh  hello.cc  hello_test.cc
buildfarm/: server.config  worker-linux-arm64.config  worker-macos-arm64.config  worker-macos-x86_64.config
src/: main.rs
