genrule(
    name = "get_platform",
    srcs = [],
    outs = ["platform.txt"],
    cmd = """uname -a > $@""",
)

sh_test(
    name = "get_platform_test",
    srcs = ["get_platform_test.sh"],
    data = [":get_platform"],
)

cc_library(
    name = "hello_lib",
    srcs = ["hello.cc"],
    hdrs = ["hello.h"],
)

cc_binary(
    name = "hello",
    srcs = ["main.cc"],
    deps = [":hello_lib"],
)

cc_test(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    deps = [":hello_lib"],
)