load("@rules_rust//rust:rust.bzl", "rust_binary", "rust_library", "rust_test")

genrule(
    name = "get_platform",
    srcs = [],
    outs = ["platform.txt"],
    cmd = """uname -a > $@""",
)

sh_test(
    name = "get_platform_test",
    srcs = ["get_platform_test.sh"],
    data = [":get_platform"],
)

cc_library(
    name = "hello_lib",
    srcs = ["hello.cc"],
    hdrs = ["hello.h"],
)

cc_binary(
    name = "hello",
    srcs = ["main.cc"],
    deps = [":hello_lib"],
)

cc_test(
    name = "hello_test",
    srcs = ["hello_test.cc"],
    deps = [":hello_lib"],
)

rust_library(
    name = "hello_rs",
    srcs = ["src/main.rs"],
)

rust_test(
    name = "hello_rs_test",
    crate = ":hello_rs",
    # exec_properties = {
    #     "test.cpu": "arm64",
    # },
)
